--- a/_compass/modules/_nav.scss
+++ b/_compass/modules/_nav.scss
@@ -4,7 +4,7 @@
     padding: 0;
     margin-top: 0;
     margin-bottom: 25px;
-    border-bottom: 1px solid $white;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
   }
   .nav-list-item {
     float: left;
@@ -22,6 +22,7 @@
     &:hover,
     &:visited:hover {
       text-decoration: none;
+      color: $white;
     }
 
     &.active {
