--- a/_compass/modules/_listing.scss
+++ b/_compass/modules/_listing.scss
@@ -3,6 +3,9 @@
   padding: 0;
   list-style-type: none;
 }
+.listing-indented {
+  padding-left: 15px;
+}
 .listing-item {
   padding: 0.3em .5em 0.3em 0.1em;
   line-height: 1.1;
