Tidy up page headers

--- a/_compass/modules/_listing.scss
+++ b/_compass/modules/_listing.scss
@@ -16,3 +16,11 @@
     padding-right: 2px;
   }
 }
+.listing-heading {
+  line-height: 1.4em;
+  margin-bottom: 0.375em;
+  margin-top: 1.6em;
+  margin-bottom: 0.2em;
+  color: rgba(255, 255, 255, 0.44);
+  font-size: 0.94em;
+}
