--- a/_compass/style.scss
+++ b/_compass/style.scss
@@ -40,6 +40,6 @@
 @import 'modules/mobile-menu';
 @import 'modules/utilities';
 @import 'modules/nav';
-
+@import 'modules/text';
 
 @import 'pages/home';
