--- a/_includes/mobile-header.html
+++ b/_includes/mobile-header.html
@@ -1,4 +1,4 @@
-<header class='header shadow-subtle'>
+<header class='header shadow-subtle hidden-lg'>
   <div class="container">
     <div class="header-info u-pull-left logo">
       <a class='logo-title' href='/'>Sam<span class='logo-accent'>Selikoff</span></a>
