--- a/_layouts/inverted.html
+++ b/_layouts/inverted.html
@@ -2,16 +2,10 @@
 layout: base
 ---
 
-<div class='hidden-lg'>
-  {% include mobile-header.html %}
-</div>
+{% include mobile-header.html %}
 
 <div class="content">
-  <div class="content-secondary-wrapper visible-lg">
-    <div class="content-secondary" role="complementary">
-      {% include logo.html %}
-    </div>
-  </div>
+  {% include sidebar.html %}
 
   <div class="content-main-wrapper">
     <div class="content-main">
