--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,1 +1,5 @@
-<h1>Hey there, it's Sam!</h1>
+<div class="content-secondary-wrapper visible-lg">
+  <aside class='content-secondary' role='complementary'>
+    {% include logo.html %}
+  </aside>
+</div>
