Put it in a box?

--- a/_compass/modules/_box.scss
+++ b/_compass/modules/_box.scss
@@ -100,3 +100,13 @@
   }
 }
 
+.box-desktop {
+  @include below($main-breakpoint) {
+    margin-bottom: 0;
+    border-top: none;
+
+    .box-body {
+      padding: 0;
+    }
+  }
+}
