--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@ layout: base
 
 {% include mobile-header.html %}
 
-<section class="main container container-padding">
+<section class="container-padding">
   {{ content }}
 </section>
 
