--- a/_compass/modules/_box.scss
+++ b/_compass/modules/_box.scss
@@ -109,4 +109,10 @@
       padding: 0;
     }
   }
+
+  .box-body {
+    @include above($main-breakpoint) {
+      padding: 20px 25px;
+    }
+  }
 }
