--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,24 @@ layout: base
 
 {% include mobile-header.html %}
 
-<section class="container-padding">
-  {{ content }}
-</section>
+<div class="content">
+  {% include sidebar.html %}
+
+  <div class="content-main-wrapper">
+    <div class="content-main">
+      <section class="container-padding clearfix">
+        {% include nav.html %}
+        
+        <div class="box box-desktop shadow-standout shadow-desktop">
+          <div class="box-body">
+            {{ content }}
+          </div>
+        </div>
+      </section>
+    </div>
+  </div>
+</div>
 
 {% include mobile-nav.html %}
+
 {% include footer.html %}
