--- a/_layouts/writing.html
+++ b/_layouts/writing.html
@@ -1,5 +1,22 @@
 ---
 layout: default
+site-section: writings
 ---
 
-{{content}}
+<div id="{{ page.site-section }}">
+  <article>
+    <h1>{{ page.title }}
+      <span class="subtitle thin">{{ page.subtitle }}</span>
+    </h1>
+    <p class="attribution">
+      by <a href="/about/">Sam Selikoff</a>
+      <span class="u-pull-right">{{ page.date | date: "%B %-d, %Y" }}</span>
+    </p>
+
+    <hr class="divider-main">
+
+    {{ content }}
+  </article>
+
+  {% include comments.html %} 
+</div>
