Refactor layout SASS

--- a/_compass/layouts/_content.scss
+++ b/_compass/layouts/_content.scss
@@ -3,41 +3,33 @@
   position: relative;
   
   .content-secondary-wrapper {
+    @include content-wrapper($secondary-width);
     @include above($main-breakpoint) {
       float: left;
-      width: 30%;
       background-color: $darkBlue;
       position: absolute;
       top: 0;
       bottom: 0;
     }
-    @include above(1000px) {
-      width: calc(50% - 200px);
-    }
   }
   .content-secondary {
+    @include content-inner($secondary-width);
     @include above($main-breakpoint) {
       width: 100%;
-      max-width: 300px;
       float: right;
     }
   }
   .content-main-wrapper {
+    @include content-wrapper($main-width);
     @include above($main-breakpoint) {
       position: relative;
       float: right;
-      width: 70%;
       min-height: calc(100vh - 88px); // 88px is the height of the footer
       background-color: $blue;
       @include box-shadow(-5px 0 1px -3px rgba(0, 0, 0, 0.2));
     }
-    @include above(1000px) {
-      width: calc(50% + 200px);
-    }
   }
   .content-main {
-    @include above($main-breakpoint) {
-      max-width: 700px;
-    }
+    @include content-inner($main-width);
   }
 }
