Use projects instead of work

--- a/_includes/mobile-nav.html
+++ b/_includes/mobile-nav.html
@@ -4,7 +4,7 @@
     <li><a class='mobile-menu-link' href="/blog">blog </a></li>
     <li><a class='mobile-menu-link' href="/talks">talks </a></li>
     <li><a class='mobile-menu-link' href="/writings">writings </a></li>
-    <li><a class='mobile-menu-link' href="/work">code + design </a></li>
+    <li><a class='mobile-menu-link' href="/projects">code + design </a></li>
     <li><a class='mobile-menu-link' href="/about">about </a></li>
   </ul>
 </nav>
