--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,7 +13,7 @@
       <a {% if siteSection == 'writings' %}class='active'{% endif %} href="/writings">Writings</a>
     </li>
     <li class='nav-list-item'>
-      <a {% if siteSection == 'work' %}class='active'{% endif %} href="/work">Code + design</a>
+      <a {% if siteSection == 'projects' %}class='active'{% endif %} href="/projects">Code + design</a>
     </li>
   </ul>
 </nav>
