--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,10 @@
   <div class='container'>
     <p class='footer-content'>
       <a class='footer-link' href='http://www.twitter.com/samselikoff'>
-        <img class='footer-link-img' src='/images/icons/twitter.png' alt=''>
+        <img class='footer-link-img' src='/images/icons/twitter_white.png' alt=''>
+      </a>
+      <a class='footer-link' href='/feed.xml'>
+        <img class='footer-link-img' src='/images/icons/rss.png' alt=''>
       </a>
       &copy;2014 Sam Selikoff.
       <a href='mailto:sam.selikoff@gmail.com'>Contact me</a> with questions or comments.
