--- a/_compass/layouts/_footer.scss
+++ b/_compass/layouts/_footer.scss
@@ -13,8 +13,13 @@
     padding-left: 10px;
   }
   .footer-link-img {
-    background-color: #bbb;
     height: 35px;
-    border: 1px solid #666;
+    opacity: 0.65;
+    @include transition-property(opacity);
+    @include transition-duration(0.2s);
+
+    &:hover {
+      opacity: 1;
+    }
   }
 }
