--- a/_compass/tools/_utilities.scss
+++ b/_compass/tools/_utilities.scss
@@ -40,6 +40,12 @@
 .u-padding {
   padding: 1em;
 }
+
+.u-90p {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
 .u-well {
   border: 1px solid #ddd;
   border-radius: 4px;
