--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -3,3 +3,17 @@
 @tailwind components;
 
 @tailwind utilities;
+
+@responsive {
+  .bg-gradient-vignette {
+    background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.85) 0%,
+      rgba(0, 0, 0, 0) 100%
+    );
+  }
+
+  .bg-gradient-none {
+    background-image: none;
+  }
+}
